fixed HP align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ h2 {
     border:10px solid lightgray;
 }
 
-#tag1, #tag2, #tag3, #tag4, #tag5, #tag6, #tag7 {
+#tag1, #tag2, #tag3, #tag4, #tag5, #tag6, #tag7, #tag8 {
     float: left;
     position: absolute;
     top: 75%;
